--- a/tableau.html
+++ b/tableau.html
@@ -65,7 +65,7 @@
 					<div class="content">
 						<div class="inner">
 							<header class="major">
-								<h3>Drinking Watter For All</h3>
+								<h3>Drinking Water For All</h3>
 							</header>
 							<p>Design of a dashboard to capture the situation regarding access to water globally.</p>
 							<ul class="actions">
