--- a/DAP9.html
+++ b/DAP9.html
@@ -107,7 +107,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/hani-c/DataProjectsPortfolio" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; HaniC</li>
